refactor:cacheの無効化、errorページのカスタマイズ

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,26 +1,56 @@
-upstream app {
-    server app:3031 fail_timeout=0;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
+
+include /usr/share/nginx/modules/*.conf;
+
+events {
+    worker_connections 1024;
+}
+
+
+http {
+  upstream app {
+      server app:3031;
   }
+
+  include mime.types;
+  default_type application/octet-stream;
 
   server {
-    listen 80;
-    server_name localhost;
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-  
-     location /static/ {
-       alias /opt/apps/static/;
-     }
-    location / {
-      try_files $uri @app;
-    }
+      client_max_body_size 20M;
+      listen 80 default_server;
+      listen [::]:80 default_server;
 
-    location @app {
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_redirect off;
-      proxy_pass http://app;
+      location / {
+          proxy_pass http://app;
+          proxy_intercept_errors on;
+
+          add_header Last-Modified $date_gmt;
+          add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+          if_modified_since off;
+          expires off;
+          etag off;
+      }
+      location /static/ {
+          alias /home/app/web/static/;
+      }
+      location /media/ {
+          alias /home/app/web/media/;
+      }
+      location /templates/ {
+          alias /home/app/web/tamplates/;
+      }
+      error_page 404 /404.html;
+          location /404.html {
+              root /etc/nginx/html;
+              internal;
+      }
+      error_page 500 /500.html;
+          location /500.html {
+              root /etc/nginx/html;
+              internal;
+      }
     }
   }
-
