--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 services:
   app:
     restart: always
@@ -11,24 +11,24 @@ services:
       - "3031"
     depends_on:
       - postgres
-    command:
-      sh -c "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn app.wsgi -b 0.0.0.0:3031"
+    command: sh -c "python manage.py migrate && gunicorn app.wsgi -b 0.0.0.0:3031"
     env_file:
       - ./env.dev
   nginx:
     restart: always
-    image: nginx
+    image: nginx:1.19.1
     depends_on:
       - app
     ports:
       - "80:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/html:/etc/nginx/html
       - ./app/static:/home/app/web/static
       - ./app/media:/home/app/web/media
   postgres:
     image: postgres:12.0-alpine
-    volumes: 
+    volumes:
       - "dbdata:/var/lib/postgresql/data"
     environment:
       - POSTGRES_PASSWORD=postgres
@@ -38,4 +38,3 @@ services:
 volumes:
   dbdata:
   staticdata:
-
