--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,3 +5,10 @@ psycopg2-binary>=2.8.5,<2.9.0
 flake8>=3.6.0,<3.7.0
 ptvsd>=4.3.2,<4.4.0
 Pillow>=7.1.2,<7.2.0
+channels_redis>=2.4.0,<2.5.0
+asgiref>=3.2.10,<3.3.0
+channels>=2.4.0,<2.5.0
+daphne>=2.5.0,<2.6.0
+redis>=3.5.3,<3.6.0
+
+
