--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,43 +11,65 @@ events {
 
 
 http {
-  upstream app {
-      server app:3031;
-  }
-
-  include mime.types;
-  default_type application/octet-stream;
-
-  server {
-      client_max_body_size 20M;
-      listen 80 default_server;
-      listen [::]:80 default_server;
-
-      location / {
-          proxy_pass http://app;
-          proxy_intercept_errors on;
-
-          add_header Last-Modified $date_gmt;
-          add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-          if_modified_since off;
-          expires off;
-          etag off;
-      }
-      location /static/ {
-          alias /home/app/web/static/;
-      }
-      location /templates/ {
-          alias /home/app/web/tamplates/;
-      }
-      error_page 404 /404.html;
-          location /404.html {
-              root /etc/nginx/html;
-              internal;
-      }
-      error_page 500 /500.html;
-          location /500.html {
-              root /etc/nginx/html;
-              internal;
-      }
+    upstream app {
+        server app:3031;
     }
-  }
+
+    upstream websocket {
+    server app:3001;
+    } 
+    
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
+    include mime.types;
+    default_type application/octet-stream;
+
+    server {
+        client_max_body_size 20M;
+        listen 80 default_server;
+        listen [::]:80 default_server;
+
+        # gunicorn
+        location / {
+            proxy_pass http://app;
+            proxy_intercept_errors on;
+
+            add_header Last-Modified $date_gmt;
+            add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+            if_modified_since off;
+            expires off;
+            etag off;
+        }
+        # websocket
+            location /ws/ {
+                proxy_pass http://websocket/;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection $connection_upgrade;
+                proxy_buffers 8 32k;
+                proxy_buffer_size 64k;
+                proxy_read_timeout 86400s;
+                proxy_send_timeout 86400s;
+            }
+
+        location /static/ {
+            alias /home/app/web/static/;
+        }
+        location /templates/ {
+            alias /home/app/web/tamplates/;
+        }
+        error_page 404 /404.html;
+            location /404.html {
+                root /etc/nginx/html;
+                internal;
+        }
+        error_page 500 502 503 504 /500.html;
+            location /500.html {
+                root /etc/nginx/html;
+                internal;
+        }
+        }
+    }
