--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
             - pip_install
             - save_package
             - save_package
+            - set_env_variable
             - database_migration
             - execute_test
 
