--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,8 @@ jobs:
         steps:
             - checkout
             - add_ssh_keys:
+                fingerprints:
+                    - "b6:d5:b5:6d:63:c7:5f:9b:48:88:d2:c0:cd:22:6f:e0"
             - run: ssh ${USER_NAME}@{HOST_NAME_1} 'cd /usr/src/article/ && git pull origin master'
 
 
