--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
                 fingerprints:
                     - 'b6:d5:b5:6d:63:c7:5f:9b:48:88:d2:c0:cd:22:6f:e0'
             - run:
-                name: deploy project
+                name: deploy
                 command: |
                      ssh -oStrictHostKeyChecking=no ${USER_NAME}@${HOST_NAME_1} 'cd /usr/src/article && sudo git pull origin master'
 
